<resources>
    <string name="app_name">VolunteeApp</string>
    <string name="title_job_detail">Job Detail</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Hint</string>
    <string name="no_results">No Results Found</string>


    <string name="job_listing">Job Listing</string>
    <string name="job_detail">Job Details</string>
    <string name="rating">Rating:</string>
    <string name="location">Location</string>
    <string name="job_type">Job Type</string>
    <string name="job_time">Posted</string>
    <string name="btn_apply">APPLY</string>
    <string name="lorem">Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem Lorem Ipsum ponem donem</string>
    <string name="timeline_job_details">Timeline | Job Details</string>
    <string name="job_description">Job Description</string>
    <string name="btn_rate">Write a revew (optional)</string>
    <string name="btn_cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="write_a_review">Write a review...</string>
    <string name="company_name">Company Name</string>
    <string name="days">days</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="other_details">Other Details</string>
    <string name="rating_users">users</string>
</resources>
