<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
        android:id="@+id/company_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/company_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/rating_bar_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:progressTint="#ffd700"
            android:secondaryProgressTint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/review1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_rate">

        <EditText
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_rate"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>