<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="0dp"
    android:padding="0dp">

    <TextView
        android:id="@+id/company_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:text="Company Title"
        android:textColor="#fff"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/rating_bar_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/company_title"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/review1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_bar_active"
        android:hint="@string/btn_rate">

        <EditText
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <requestFocus />
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/rate"
            android:textColor="#fff" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/btn_cancel"
            android:textColor="#fff" />
    </LinearLayout>


</RelativeLayout>