<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="0dp">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="0dp"
            android:background="@drawable/title_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/job_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:src="@drawable/landscape" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/job_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="21sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/job_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#d9d9d9">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:stretchColumns="1">

                <TableRow android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location"
                        android:textAlignment="center"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/job_type"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/job_time"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/job_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center" />


                    <TextView
                        android:id="@+id/job_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/job_post_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                </TableRow>

            </TableLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_favorite" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_phone" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_dark"
                        android:text="@string/btn_apply"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>

        </FrameLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>